salesforce/force-app/main/default/objects/RY_Enrolment__c/RY_Enrolment__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Proposed Red and Yellow demonstration model; not verified against an existing org.</description><enableReports>true</enableReports><label>RY Enrolment</label><nameField><displayFormat>RY-{000000}</displayFormat><label>Enrolment Number</label><type>AutoNumber</type></nameField><pluralLabel>RY Enrolment Records</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>