salesforce/force-app/main/default/objects/RY_Enrolment__c/fields/Agreed_Fee_ZAR__c.field-meta.xml
<CustomField><fullName>Agreed_Fee_ZAR__c</fullName><label>Agreed Fee ZAR</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type></CustomField>