salesforce/force-app/main/default/objects/RY_Enrolment__c/fields/Application__c.field-meta.xml
<CustomField><fullName>Application__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Application</label><referenceTo>RY_Application__c</referenceTo><relationshipLabel>Application Records</relationshipLabel><relationshipName>RY_Enrolment_Application</relationshipName><required>false</required><type>Lookup</type></CustomField>