salesforce/force-app/main/default/objects/RY_Enrolment__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField><fullName>Enrolled_Date__c</fullName><label>Enrolled Date</label><required>false</required><type>Date</type></CustomField>