salesforce/force-app/main/default/objects/RY_Enrolment__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><length>255</length><required>false</required><type>Text</type></CustomField>