salesforce/force-app/main/default/objects/RY_Enrolment__c/fields/Student__c.field-meta.xml
<CustomField><fullName>Student__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Student</label><referenceTo>RY_Student__c</referenceTo><relationshipLabel>Student Records</relationshipLabel><relationshipName>RY_Enrolment_Student</relationshipName><required>false</required><type>Lookup</type></CustomField>